# microfips

./: .env.example  .fips-upstream.json  .gitignore  AGENTS.md  Cargo.toml  Cargo.toml.bak  Makefile  README.md  keys.json  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-04_microfips-interop-hardening.md
.sisyphus/evidence/: task-8-ble-handshake.txt  task-8-ble-scan.txt  task-8-build.txt  task-8-build2.txt  task-8-build3.txt  task-8-flash.txt  task-8-flash2.txt  task-8-flash3.txt  task-8-vps.txt
crates/fips-decrypt/: Cargo.toml
crates/fips-decrypt/src/: main.rs
crates/fips-fmp/: Cargo.toml
crates/fips-fmp/src/: lib.rs
crates/fips-identity/: Cargo.toml
crates/fips-identity/src/: lib.rs
crates/fips-noise/: Cargo.toml
crates/fips-noise/src/: lib.rs
crates/microfips/: Cargo.toml  build.rs
crates/microfips-build/: Cargo.toml
crates/microfips-build/src/: lib.rs
crates/microfips-core/: Cargo.toml  build.rs
crates/microfips-core/examples/: gen_golden_vectors.rs
crates/microfips-core/src/: fmp.rs  fsp.rs  hex.rs  identity.rs  lib.rs  noise.rs  slip.rs  wire.rs
crates/microfips-core/src/mmp/: algorithms.rs  mod.rs  report.rs
crates/microfips-core/tests/: derive_test_keys.rs  error_injection.rs  fips_compatibility.rs  fips_wire_format.rs  fsp_edge_cases.rs  fsp_over_fmp.rs  golden_vectors.json  golden_vectors.rs  golden_vectors_format.md  golden_vectors_ik.rs  pcap_regression.rs  vector_types.rs
crates/microfips-esp-common/: Cargo.toml
crates/microfips-esp-common/src/: config.rs  dns.rs  lib.rs  node_info.rs  stats.rs  udp_transport.rs
crates/microfips-esp-transport/: Cargo.toml
crates/microfips-esp-transport/src/: backoff.rs  ble_host.rs  ble_transport.rs  chip_config.rs  config.rs  control.rs  esp_now_transport.rs  gpio_helpers.rs  handler.rs  heap.rs  l2cap_host.rs  l2cap_transport.rs  led.rs  lib.rs  logger.rs  macros.rs  node_info.rs  peer_caps.rs  rate_limit.rs  rng.rs  run_tasks.rs  runner.rs  stats.rs  usb_transport.rs  wifi_transport.rs
crates/microfips-esp32/: Cargo.toml  build.rs
crates/microfips-esp32/.cargo/: config.toml
crates/microfips-esp32/src/: ble_host.rs  ble_transport.rs  config.rs  control.rs  handler.rs  l2cap_host.rs  l2cap_transport.rs  led.rs  lib.rs  logger.rs  main.rs  node_info.rs  run.rs  secrets.rs.example  stats.rs  uart_transport.rs  wifi_transport.rs
crates/microfips-esp32c3/: Cargo.toml  build.rs  c3-link.x  memory.x
crates/microfips-esp32c3/.cargo/: config.toml
crates/microfips-esp32c3/src/: lib.rs  run.rs
crates/microfips-esp32s3/: Cargo.toml
crates/microfips-esp32s3/src/: ble_host.rs  ble_transport.rs  config.rs  control.rs  handler.rs  l2cap_host.rs  l2cap_transport.rs  lib.rs  logger.rs  main.rs  node_info.rs  run.rs  stats.rs  wifi_transport.rs
crates/microfips-fw/: Cargo.toml
crates/microfips-fw/src/: main.rs  main.rs.bak
crates/microfips-http-demo/: Cargo.toml
crates/microfips-http-demo/src/: lib.rs  main.rs
crates/microfips-http-test/: Cargo.toml
crates/microfips-http-test/src/: main.rs
crates/microfips-l2cap-test/: Cargo.toml
crates/microfips-link/: Cargo.toml
crates/microfips-link/src/: main.rs
crates/microfips-protocol/: Cargo.toml
crates/microfips-protocol/src/: error.rs  framing.rs  fsp_handler.rs  lib.rs  node.rs  node.rs.bak  peer_policy.rs  transport.rs
crates/microfips-protocol/src/mmp/: metrics.rs  mod.rs  peer_state.rs  receiver.rs  sender.rs  stats.rs
crates/microfips-protocol/src/transport/: scripted.rs
crates/microfips-service/: Cargo.toml
crates/microfips-service/src/: lib.rs
crates/microfips-sim/: Cargo.toml
crates/microfips-sim/src/: main.rs
crates/microfips/.cargo/: config.toml
crates/microfips/src/: board_f469.rs  board_f746.rs  cdc_transport.rs  config.rs  display.rs  handler.rs  led.rs  main.rs  rng.rs  stats.rs
deploy/: deploy_overnight.sh  fips-overnight-monitor.service  fips-restart.service  fips-restart.timer
docs/: architecture.md  ble-capture-decrypt.md  esp32-c3-feasibility.md  fips-microfips-compat-audit.md  fips-microfips-parity.md  fips-vps-interop-test-plan.md  http-demo.md  madeira-discussion-prep.md  microfips-esp32-implementation-plan-2026-07-09.md  microfips-esp32-status-report-2026-07-09.md  milestones.md  v2-protocol-tracking.md  vps-setup.md  vps-tunnel.md
docs/adr/: 0001-embassy-over-stm32f4xx-hal.md  0002-flash-key-storage.md  0003-custom-noise-implementation.md  0004-x-only-ecdh-normalization.md  0005-transport-trait-design.md  0006-modular-crate-separation.md  0007-frame-cap-vs-mtu-split.md
esp8266-wifi-bridge/: README.md  main.cpp  platformio.ini
labgrid/config/: inventory.yaml
labgrid/config/envs/: esp32-d0wd-ble.yaml  esp32-d0wd-l2cap.yaml  esp32-d0wd-uart.yaml  linux-host.yaml  stm32-f469.yaml
labgrid/scripts/: flash_esp32.sh  flash_esp32s3.sh  flash_stm32.sh  flash_stm32f746.sh
labgrid/tests/: conftest.py  test_esp32_ble.py  test_esp32_l2cap.py  test_esp32_uart.py  test_fips_host.py  test_stm32.py
scripts/: add_microfips_tasks.py  capture_serial.py  check-esp-builds.sh  ci-fips-node.sh  ci_sim_ping.py  fix-fips-config.sh  fix-fips-config2.sh  flash-and-bridge.sh  generate-summary.py  install-fips-service.sh  overnight_monitor.py  setup-vps-peer.sh  start-fips.sh  test_ble_l2cap.sh  test_ble_overnight.sh  test_dual_mcu.sh  test_hw_handshake.sh  test_mcu_to_mcu_fsp.sh  test_sim_handshake.sh
src/: identity.rs  main.rs  noise.rs  slip.rs  slip_net.rs
tools/: ble_udp_bridge.py  capture_fips.sh  debug_bridge.py  fips_bridge.py  fips_dissector.lua  generate_fips_compat.py  reference.pcap  serial_tcp_proxy.py  serial_udp_bridge.py  test-ble-pipeline.sh  test_ble_bridge.py  test_control.py  test_sim_vps.sh
