[workspace]
members = ["crates/microfips-core", "crates/microfips-link", "crates/microfips-sim", "crates/microfips", "crates/microfips-protocol", "crates/microfips-service", "crates/microfips-http-demo", "crates/microfips-http-test", "crates/microfips-esp32", "crates/fips-decrypt", "crates/microfips-esp32s3"]
resolver = "2"

[workspace.metadata.esp32]
runner = "espflash flash --monitor -p /dev/ttyUSB0 --chip esp32"

[profile.release.package.esp-radio]
opt-level = 3
