[package]
name = "microfips-core"
version = "0.1.0"
edition = "2024"
description = "FIPS protocol core: SLIP, identity, Noise, wire format (no_std)"

[dependencies]
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "ecdh"] }
chacha20poly1305 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }

[dev-dependencies]
hex = "0.4"

[features]
default = []
std = ["sha2/std", "k256/std", "chacha20poly1305/std", "hkdf/std", "hmac/std"]
