[package]
name = "microfips-esp-common"
version = "0.1.0"
edition = "2021"
description = "Shared ESP32 code (chip-agnostic, no esp-hal dependency)"

[dependencies]
microfips-core = { path = "../microfips-core" }
microfips-protocol = { path = "../microfips-protocol" }
embassy-net = { workspace = true, features = ["dhcpv4", "udp"] }
embassy-time = { workspace = true }
static_cell = { workspace = true }
