[package]
name = "microfips-esp-transport"
version = "0.1.0"
edition = "2021"
description = "Shared ESP32 transport code with esp-hal support"

[lib]
name = "microfips_esp_transport"

[features]
default = []
esp32 = ["esp-hal/esp32", "esp-radio/esp32", "esp-println/esp32", "esp-println/auto"]
esp32s3 = ["esp-hal/esp32s3", "esp-radio/esp32s3", "esp-println/esp32s3", "esp-println/jtag-serial"]
log = ["dep:log"]
ble = ["dep:esp-radio", "dep:trouble-host", "dep:bt-hci", "dep:embedded-io", "dep:esp-println", "log"]
l2cap = ["dep:esp-radio", "dep:trouble-host", "dep:bt-hci", "dep:embedded-io", "dep:esp-println", "log"]
wifi = ["dep:esp-radio", "dep:embassy-net", "dep:esp-println", "log"]

[build-dependencies]
microfips-build = { path = "../microfips-build" }

[dependencies]
microfips-core = { path = "../microfips-core", features = ["log"] }
microfips-esp-common = { path = "../microfips-esp-common" }
microfips-http-demo = { path = "../microfips-http-demo" }
microfips-protocol = { path = "../microfips-protocol", features = ["log"] }
microfips-service = { path = "../microfips-service" }
rand_core = { version = "0.6", default-features = false }
esp-hal = { version = "1.1.0", features = ["unstable"] }
embassy-time = "0.5.1"
embassy-futures = "0.1.2"
embassy-executor = "0.10"
embassy-sync = "0.8"
embedded-io-async = "0.7"
heapless = "0.9"
static_cell = "2"
embassy-net = { version = "0.9.0", features = ["dhcpv4", "udp"], optional = true }
esp-radio = { version = "0.18.0", default-features = false, features = ["ble", "wifi", "unstable"], optional = true }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "c103e97ff7d333c2cb76b643477e3c4141d0ff74", features = ["default-packet-pool-mtu-255", "scan", "central"], optional = true }
esp-alloc = { version = "0.10", features = ["global-allocator"] }
bt-hci = { version = "0.8", features = ["uuid"], optional = true }
embedded-io = { version = "0.7", optional = true }
esp-println = { version = "0.16.1", default-features = false, optional = true }
log = { version = "0.4", optional = true }
