[package]
name = "microfips"
version = "0.1.0"
edition = "2024"
description = "Minimal FIPS leaf node on STM32F469I-DISCO"

[dependencies]
microfips-core = { path = "../microfips-core" }
embassy-stm32 = { path = "../../../embassy/embassy-stm32", features = [
    "defmt",
    "stm32f469ni",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-usb = { path = "../../../embassy/embassy-usb", features = ["defmt"] }
embassy-usb-synopsys-otg = { path = "../../../embassy/embassy-usb-synopsys-otg", features = ["defmt"] }
embassy-executor = { path = "../../../embassy/embassy-executor", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { path = "../../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-sync = { path = "../../../embassy/embassy-sync", features = ["defmt"] }
embassy-futures = { path = "../../../embassy/embassy-futures" }

defmt = "1.0"
defmt-rtt = "1.0"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
heapless = "0.9"
static_cell = "2"
