[package]
name = "microfips-http-test"
version = "0.1.0"
edition = "2024"
description = "FIPS responder that tests HTTP over FMP with the MCU"

[dependencies]
microfips-core = { path = "../microfips-core", features = ["std", "responder"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "ecdh"] }
rand = "0.9"
hex = "0.4"
