[package]
name = "microfips-http-test"
version = "0.1.0"
edition = "2021"
description = "FIPS responder that tests HTTP over FMP with the MCU"

[dependencies]
log = "0.4"
microfips-core = { path = "../microfips-core", features = ["std"] }
microfips-http-demo = { path = "../microfips-http-demo" }
microfips-service = { path = "../microfips-service" }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "ecdh"] }
rand = "0.9"
hex = "0.4"
