[package]
name = "microfips-link"
version = "0.1.0"
edition = "2024"
description = "FMP link integration test (host-side, std only)"

[[bin]]
name = "fips-handshake"
path = "src/main.rs"

[dependencies]
microfips-core = { path = "../microfips-core", features = ["std"] }
k256 = { version = "0.13", features = ["arithmetic", "ecdsa", "ecdh", "std"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
