[package]
name = "microfips-sim"
version = "0.1.0"
edition = "2024"
description = "Host-side FIPS lifecycle simulator — simulates MCU protocol without hardware"

[dependencies]
microfips-core = { path = "../microfips-core", features = ["std"] }
microfips-protocol = { path = "../microfips-protocol", features = ["std"] }
embassy-executor = { version = "0.10.0", features = ["platform-std", "executor-thread"] }
embassy-time = { version = "0.5.1", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
