[package]
name = "microfips"
version = "0.1.0"
edition = "2024"
description = "Minimal FIPS leaf node on STM32F469I-DISCO"

[dependencies]
microfips-core = { path = "../microfips-core" }
embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "stm32f469ni",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-usb-synopsys-otg = { version = "0.3.2", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0"
defmt-rtt = "1.0"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
heapless = "0.9"
static_cell = "2"
